- Added new SVG files for backgrounds in `public/images`. - Updated `index.css` to include a new breakpoint variable and corrected letter-spacing. - Created `CurrentDetails.tsx` component for displaying current weather details. - Created `DailyDetails.tsx` component for displaying daily weather information. - Created `HourlyDetails.tsx` component for displaying hourly weather information.

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,8 @@
 }
 
 @theme {
+  --breakpoint-lg: 75rem;
+
   --font-primary: "BricolageGrotesque", sans-serif;
   --font-secondary: "DMSans", sans-serif;
   --font-secondary-italic: "DMSansItalic", sans-serif;
@@ -79,7 +81,7 @@
 @utility text-preset-5 {
   font-size: 1.25rem;
   line-height: 120%;
-  letter-spacing: 0px;
+  letter-spacing: 0%;
   font-family: var(--font-secondary);
   font-weight: 500;
 
